ingress-admin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-coffee-ingress-admin
  namespace: find-coffee
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  rules:
    - host: 194.195.255.69.nip.io
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8000
