ingress-callback.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-coffee-ingress-callback
  namespace: find-coffee
spec:
  ingressClassName: nginx
  rules:
    - host: 194.195.124.73.nip.io
      http:
        paths:
          - path: /callback
            pathType: Exact
            backend:
              service:
                name: web
                port:
                  number: 8000
