ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-coffee-ingress
  namespace: find-coffee
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "20"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 194.195.255.69.nip.io
      secretName: find-coffee-tls
  rules:
    - host: 194.195.255.69.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8000
